--- a/.gitignore
+++ b/.gitignore
@@ -12,4 +12,12 @@
 *.out
 
 # Dependency directories (remove the comment below to include it)
-# vendor/
+vendor/
+
+# release dir
+release/
+
+# ide
+.vscode/
+.idea/
+dist/
