--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,6 +1,7 @@
 name: Release mosdns-cn
 
 on:
+  workflow_dispatch:
   push:
     tags:
       - '*'
@@ -17,8 +18,6 @@ jobs:
       -
         name: Set up Go
         uses: actions/setup-go@v2
-        with:
-          go-version: 1.17
       -
         name: Run GoReleaser
         uses: goreleaser/goreleaser-action@v2
