--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,6 +18,8 @@ jobs:
       -
         name: Set up Go
         uses: actions/setup-go@v2
+        with:
+          go-version: '1.17'
       -
         name: Run GoReleaser
         uses: goreleaser/goreleaser-action@v2
